Delete h-level parameters